--- a/project1/Window1.xaml
+++ b/project1/Window1.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:project1"
         mc:Ignorable="d"
       Title="Авторизація" Height="603" Width="350" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None" FontFamily="Segoe UI Emoji">
-    <Grid>
+    <Grid MouseDown="Grid_MouseDown">
         <Rectangle Height="280" VerticalAlignment="Top">
             <Rectangle.Fill>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -32,10 +32,10 @@
             <StackPanel Margin="15,59,15,-117" Grid.ColumnSpan="2">
                 <TextBox Name="login" Margin="0,10" materialDesign:HintAssist.Hint="Логін" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="18"/>
                 <PasswordBox Name="parol" Margin="0,10" materialDesign:HintAssist.Hint="Пароль" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" FontFamily="Champagne &amp; Limousines" FontSize="18"/>
-                <TextBox Name="tel" Margin="0,10" materialDesign:HintAssist.Hint="Номер телефону" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="18"/>
+                <TextBox Name="tel" Margin="0,10" materialDesign:HintAssist.Hint="Номер телефону" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="18" PreviewTextInput="Tel_PreviewTextInput"/>
                 <TextBox Name="email" Margin="0,10" materialDesign:HintAssist.Hint="Email" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="18"/>
             </StackPanel>
         </Grid>
-        <Button Width="150" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,25" Content="ОК" Click="Button_Click"/>
+        <Button Width="150" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,25" Content="ОК" Click="Button_Click" Background="#FF2281D1" BorderBrush="#FF2281D1"/>
     </Grid>
 </Window>
