--- a/project1/Processors.xaml
+++ b/project1/Processors.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="project1.UserControl2"
+﻿<UserControl x:Class="project1.Processors"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -18,7 +18,7 @@
                     </StackPanel>
                     <Button x:Name="Buy" FontFamily="Champagne &amp; Limousines" Content="Купити" FontSize="18" Margin="25" Background="#FF2281D1" BorderBrush="#FF2281D1" Click="Buy_Click"/>
                 </StackPanel>
-                <Image x:Name="ImageVideo" Margin="10" Width="560" Height="400" Stretch="Uniform"/>
+                <Image x:Name="ImageVideo" Margin="10" Width="450" Height="320" Stretch="Uniform"/>
             </StackPanel>
         </materialDesign:TransitioningContent>
         <Button x:Name="button" Content="Вперед" Margin="0,0,35,25" Background="#FF2281D1" BorderBrush="#FF2281D1" HorizontalAlignment="Right" Width="80" Height="32" VerticalAlignment="Bottom" Click="Button_Click"/>
